compiler/tools/fpp-check/test/connection_pattern/undef_source.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/undef_source.fpp:2.31
  health connections instance $health
                              ^
error: symbol health is not defined
note: looking for a port interface instance here
